# MiscellaneousMusings

./: .gitignore  LearnDBT.md  Neo.md  README.md  pyproject.toml
AdventOfCode2024/: pyproject.toml
AdventOfCode2024/scripts/: 1.py  2.py  3.py  4.py  5.py
Learning-DBT/: LearnDBT.md
Learning-Neo4j/: notes.md
collective-dynamics-of-small-world-networks/: README.md  main.py  pyproject.toml
ejendomsvurderinger-2024/: README.md  cleaned_data.csv  main.py  pyproject.toml  scraped_data.csv  scraper.py
probabilistic-principal-component-analysis/: MLE.py  README.md  pyproject.toml
