[tool.poetry]
name = "ejendomsvurderinger-2024"
version = "0.1.0"
description = ""
authors = ["DueViktor <viktorduep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
